--- a/src/styles/MediaQueries.css
+++ b/src/styles/MediaQueries.css
@@ -41,6 +41,10 @@ No media query for `xs` since this is the default in Bootstrap */
     height: 220px;
   }
 
+  .feedback-container {
+    height: 100%;
+  }
+
   .text-quote {
     text-align: center;
   }
@@ -121,6 +125,10 @@ No media query for `xs` since this is the default in Bootstrap */
     height: 280px
   }
 
+  .feedback-container {
+    height: 100%;
+  }
+
   .shop-now-btn {
     margin-right: 10px;
   }
@@ -171,10 +179,6 @@ No media query for `xs` since this is the default in Bootstrap */
        object-fit: cover;
     width: 100%;
     height: 190px;
-  }
-
-  .feedback-container {
-    height: 100%;
   }
 
   .cart-modal-item-detail {
